--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -401,6 +401,8 @@ header {
 
 .portfolio__img {
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+  width: 100%;
+  height: 100%;
 }
 
 .portfolio__item:focus {
